# MockPilot-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test-config.json
mockpilot/: __init__.py  cli.py  config.py  server.py  templates.py  watcher.py
tests/: test_config.py  test_server.py  test_templates.py
