[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockpilot-cli"
version = "1.0.0"
description = "🚀 Lightweight Terminal API Mock Server Intelligent Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MockPilot Team", email = "mockpilot@example.com"}
]
keywords = ["mock", "api", "server", "testing", "cli", "http", "rest", "mock-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing :: Mocking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.scripts]
mockpilot = "mockpilot.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/MockPilot-CLI"
Repository = "https://github.com/gitstq/MockPilot-CLI"
Issues = "https://github.com/gitstq/MockPilot-CLI/issues"

[tool.setuptools]
packages = ["mockpilot"]
